--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -589,8 +589,8 @@
   "synctodrive:synctodrive_enabled": "Aktivieren",
   "synctodrive:synctodrive_interval": "Synchronisierungs-Intervall",
   "synctodrive:synctodrive_target": "USB Gerät",
-  "takeCollage": "Collage erstellen!",
-  "takePhoto": "Foto erstellen!",
+  "takeCollage": "Collage",
+  "takePhoto": "Foto",
   "telegram": "Community @ Telegram",
   "test_update_available": "Es ist ein Test-Update verfügbar.",
   "toggleFullscreen": "Vollbildmodus umschalten",
